upates and bug fixes
* `data` argument removed, use `{ "data": .. }`
* fixed pagination bugs
* improved pagination approach
* added responsive tables, use `{ "responsive": true }`
* get selected column values, `.table("selected")`
* styling improvements
* editing bug fixes

--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <head>
+  <meta charset="utf-8">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -10,13 +12,17 @@
   <script src="data.js"></script>
 
   <script>
-    <!-- $(function() { -->
-    <!-- $("#myTable").table(data); -->
-    <!-- }); -->
+    $(function() {
+    $("#table1").table({ "data": iris });
+    $("#table2").table({ "data": starwars });
+    $("#table3").table({ "data": films.slice(1, 33) });
+    });
   </script>
 </head>
 <body>
   <div class="p-5">
-    <table id="myTable" class="table table-bordered"></table>
+    <table id="table1" class="table table-bordered"></table>
+    <table id="table2" class="table"></table>
+    <table id="table3" class="table"></table>
   </div>
 </body>
